kubernetes/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-staging
  namespace: nk-tolmin
  labels:
    app: backend-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-staging
  template:
    metadata:
      labels:
        app: backend-staging
    spec:
      containers:
      - name: worker-staging
        image: localhost:32000/nk-tolmin/backend:staging
        imagePullPolicy: Always
        command: ["rq", "worker"]
        resources:
          limits:
            memory: 512Mi
            cpu: "500m"
      - name: backend-staging
        image: localhost:32000/nk-tolmin/backend:staging
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512Mi
            cpu: "500m"
        volumeMounts:
        - mountPath: /app/assets
          name: assets
      volumes:
      - name: assets
        hostPath:
          path: /opt/nk-tolmin/staging/assets
          type: Directory
